dev/rhino-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhino-deployment
spec:
  template:
    spec:
      containers:
        - name: rhino
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "300m"
