dev/rhino-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhino-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: rhino-service
              port:
                number: 80
